# code

./: Erratum_Statement.md  README.md  requirements.txt
GNNRL/: env.py  gcn.py  multiarm.py  ppo.py
examples/xApp/c/ctrl/: CMakeLists.txt  xapp_peihao.c
trandata/: KPM_UE.txt  kpm.py  mac.py  rewards.csv
xSlice_gNB/: CMakeLists.txt  gnb.sa.band78.fr1.106PRB.2x2.usrpn300.conf  phtest  phtest.c
xSlice_gNB/common/utils/ds/: byte_array.c  byte_array.h
xSlice_gNB/common/utils/nr/: nr_common.h
xSlice_gNB/doc/: SW_archi.md
xSlice_gNB/openair1/SIMULATION/NR_PHY/: dlsim.c
xSlice_gNB/openair2/E2AP/RAN_FUNCTION/: CMakeLists.txt
xSlice_gNB/openair2/E2AP/RAN_FUNCTION/CUSTOMIZED/: ran_func_gtp.c  ran_func_mac.c
xSlice_gNB/openair2/E2AP/RAN_FUNCTION/O-RAN/: ran_func_kpm.c  ran_func_rc.c  rc_ctrl_service_style_2.c  rc_ctrl_service_style_2.h
xSlice_gNB/openair2/F1AP/: f1ap_ids.c
xSlice_gNB/openair2/LAYER2/NR_MAC_gNB/: config.c  gNB_scheduler_dlsch.c  gNB_scheduler_primitives.c  mac_proto.h  mac_rrc_dl_handler.c  main.c  nr_mac_gNB.h
xSlice_gNB/openair2/LAYER2/NR_MAC_gNB/slicing/: README.md  nr_slicing.c  nr_slicing.h  nr_slicing_internal.h
xSlice_gNB/openair2/RRC/NR/: rrc_gNB.c  rrc_gNB_NGAP.c
xSlice_gNB/openair3/NGAP/: ngap_gNB_handlers.c
xSlice_gNB/targets/PROJECTS/GENERIC-NR-5GC/CONF/: gnb.band78.sa.fr1.106PRB.2x2.usrpn310.conf
